--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Adrian Videz <adrianvj18@gmail.com>
-hfsantiago <rrondonc@gmail.com>
+Roberth Rondon <rrondonc@gmail.com>
